<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
                android:title="@string/gearcm_settings_title"
                android:key="category_gearcm">
                <PreferenceScreen
                android:key="processor_settings"
                android:title="@string/gearcm_settings_title"
                android:summary="@string/gearcm_settings_summary">
                </PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- mDNIe Options -->
	    <ListPreference
	        android:key="mdnie"
	        android:title="@string/mdnie_title_head"
	        android:summary="@string/mdnie_summary_head"
	        android:entries="@array/mdnie_entries"
	        android:entryValues="@array/mdnie_entries_values"
	        android:defaultValue="6" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/category_radio_title"
        android:key="category_radio">
	    <!-- UMTS/HSDPA/HSUPA settings -->
	    <ListPreference
	        android:key="hspa"
	        android:title="@string/hspa_title_head"
	        android:summary="@string/hspa_summary_head"
	        android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:defaultValue="23" />
	</PreferenceCategory>

    <PreferenceCategory
            android:title="@string/category_volume_boost_title"
            android:key="category_volume_boost">
                <!-- Volume Boost -->
                <com.cyanogenmod.settings.device.VolumeBoostPreference
                android:key="volume_boost"
                android:title="@string/volume_boost_title_head"
                android:summary="@string/volume_boost_summary_head" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_dock_audio_title"
            android:key="category_dock_audio">
            <!-- Dock Audio -->
            <CheckBoxPreference
                android:key="cardock_audio"
                android:title="@string/cardock_audio_title_head"
                android:summaryOn="@string/cardock_audio_summary_on"
                android:summaryOff="@string/cardock_audio_summary_off"
                android:persistent="true" />
            <CheckBoxPreference
                android:key="deskdock_audio"
                android:title="@string/deskdock_audio_title_head"
                android:summaryOn="@string/deskdock_audio_summary_on"
                android:summaryOff="@string/deskdock_audio_summary_off"
                android:persistent="true" />
        </PreferenceCategory>

	<PreferenceCategory
                android:title="@string/category_wifi_title"
                android:key="category_wifi">
		<CheckBoxPreference
			android:key="wifi_speed"
			android:title="@string/wifi_speed_head"
			android:summaryOn="@string/wifi_speed_on"
			android:summaryOff="@string/wifi_speed_off"
                android:persistent="true" />
	</PreferenceCategory>

 	<PreferenceCategory
                android:title="@string/category_charge_title"
                android:key="category_charge">
		<CheckBoxPreference
			android:key="fast_charge"
			android:title="@string/fast_charge_head"
			android:summaryOn="@string/fast_charge_on"
			android:summaryOff="@string/fast_charge_off"
                android:persistent="true" />
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/category_ram_title"
		android:key="category_ram">
		<!-- RAM setting -->
		<CheckBoxPreference
			android:key="lowram"
			android:title="@string/lowram_head"
			android:summaryOn="@string/lowram_on"
			android:summaryOff="@string/lowram_off"
			android:persistent="true" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_apply_settings"
            android:key="category_apply">
            <CheckBoxPreference
                android:key="apply"
                android:title="@string/apply_title"
                android:summaryOn="@string/apply_summary_on"
                android:summaryOff="@string/apply_summary_off"
                android:persistent="true" />
        </PreferenceCategory>

</PreferenceScreen>
